--- a/app/src/main/res/layout/key_item.xml
+++ b/app/src/main/res/layout/key_item.xml
@@ -88,7 +88,7 @@
 
     </LinearLayout>
 
-    <android.support.v7.widget.AppCompatButton
+    <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/key_item__trigger_button"
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
