--- a/app/src/main/res/layout/key_item.xml
+++ b/app/src/main/res/layout/key_item.xml
@@ -95,4 +95,11 @@
         android:layout_weight="0"
         android:text="@string/key_item__trigger_button_text"/>
 
+    <androidx.appcompat.widget.AppCompatButton
+        android:id="@+id/key_item__cancel_trigger_button"
+        android:layout_width="wrap_content"
+        android:layout_height="match_parent"
+        android:layout_weight="0"
+        android:text="@string/key_item__cancel_trigger_button_text"/>
+
 </LinearLayout>
